# openci

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.jsonc  deploy.sh  melos.yaml  openci-controller.code-workspace  openci.code-workspace  pub_get_all.sh  publish_openci_runner.sh  pubspec.yaml  renovate.json  tsconfig.json
.cursor/rules/: openci-rules.mdc
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: devtools.json  vs_code.json
.github/: dependabot.yml
.github/workflows/: benchmark.yaml  check-firebase-functions-cd.yml  deploy-production.yaml  firebase-functions-ci-cd.yml  firebase-functions-test.yml  firebase-functions-tests.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  flutter_analyze.yaml  github-apps-cd.yml  github-apps-tests-runner.yml  github-apps-tests.yml  reusable-deploy-firebase-functions.yml  reusable-firebase-functions-ci.yml  reusable-github-apps-ci.yml  reusable-github-apps-tests.yml  test.yaml  verify-firebase-functions.yml
apps/cicd_sandbox_app/: README.md  pubspec.yaml
apps/docs/: .firebaserc  (+14 more)
cloud-hypervisor-images/: README.md  build-ubuntu.sh  download-kernel.sh  install.sh  start-vm-direct.sh  start-vm.sh
firecracker-images/: README.md  build.sh
openci-runner/: .gitignore  package-lock.json  package.json  test-report.junit.xml  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
openci_runner/: Cargo.toml  wrangler.toml
openci_runner/src/: github.rs  lib.rs
scripts/: dashboard_build_runner.sh  openci_model_build_runner.sh
(+562 files in other folders)
